--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -9,12 +9,50 @@
         <script type="text/javascript" src="/scripts/app.js"></script>
     </head>
     <body>
-        <div id="peopleContainer">
-            <p class="person-name"></p>
-            <p class="person-github"></p>
-            <div class="person-shoutout"></div>
+        <div class="container">
+            <div class="jumbotron text-center"><h1>Classmates Slider</h1></div>
+            <div class="row">
+                <div class="col-md-2">
+                    <button class="btn primary" id="previous">Previous</button>
+                </div>
+                <div id="peopleContainer" class="col-md-8 text-center">
+                    <!--<p class="person-name"></p>-->
+                    <!--<p class="person-movie1"></p>-->
+                    <!--<p class="person-movie2"></p>-->
+                    <!--<p class="person-song"></p>-->
+
+                </div>
+                <div class="col-md-2">
+                    <button class="btn primary" id="next">Next</button>
+                </div>
+            </div>
+            <div id="index">
+                <ul>
+                    <li class="index-point index-point-active">1</li>
+                    <li class="index-point">2</li>
+                    <li class="index-point">3</li>
+                    <li class="index-point">4</li>
+                    <li class="index-point">5</li>
+                    <li class="index-point">6</li>
+                    <li class="index-point">7</li>
+                    <li class="index-point">8</li>
+                    <li class="index-point">9</li>
+                    <li class="index-point">10</li>
+                    <li class="index-point">11</li>
+                    <li class="index-point">12</li>
+                    <li class="index-point">13</li>
+                    <li class="index-point">14</li>
+                    <li class="index-point">15</li>
+                    <li class="index-point">16</li>
+                    <li class="index-point">17</li>
+                    <li class="index-point">18</li>
+                    <li class="index-point">19</li>
+
+
+                </ul>
+            </div>
         </div>
-        <div id="lecture"></div>
+
     </body>
 
 </html>
