--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -1,3 +1,8 @@
+.row{
+    height: 400px;
+    background-color: lightgoldenrodyellow;
+}
+
 .index-point {
     width: 25px;
     height: 25px;
@@ -5,6 +10,9 @@
     border: 1px solid black;
     float: left;
     display: inline-block;
+    margin: 4px;
+    text-align: center;
+    font-weight: bold;
 }
 
 .index-point-active {
@@ -14,3 +22,27 @@
 .person-shoutout {
     height: 200px;
 }
+
+.classmate {
+    display: inline;
+    border: 3px solid #555;
+    margin: 0 auto;
+    padding: 1em auto;
+
+}
+
+.classmate h2, .classmate h1{
+    display: block;
+}
+ul {
+    margin: 1em auto;
+}
+
+.btn {
+    margin-top: 5em;
+}
+
+.hidden {
+    display:none;
+}
+
